# pymicro-vad

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.armv6  Dockerfile.armv7  MANIFEST.in  Makefile  README.md  main.cpp  mypy.ini  pyproject.toml  python.cpp  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml  publish_test.yml  test.yml  wheels.yml
micro_vad/: micro_array.hpp  micro_vad.cpp  micro_vad.h  model.h
micro_vad/kissfft/: _kiss_fft_guts.h  kiss_fft.h
micro_vad/kissfft/tools/: kiss_fftr.cc
micro_vad/tensorflow/lite/experimental/microfrontend/lib/: filterbank_util.c  kiss_fft_int16.cc  noise_reduction_util.c  pcan_gain_control_util.cc  window_util.cc
model/: vad.tflite  vad_stream.tflite
model/non_stream/: fingerprint.pb  keras_metadata.pb  model_summary.txt  saved_model.pb
model/non_stream/variables/: variables.data-00000-of-00001  variables.index
model/stream_state_internal/: fingerprint.pb  keras_metadata.pb  model_summary.txt  saved_model.pb
model/stream_state_internal/variables/: variables.data-00000-of-00001  variables.index
pymicro_vad/: __init__.py
script/: export_vad_model.py  package  setup
src/: micro_vad.cpp
tests/: test_vad.py
