[metadata]
name = pymicro-vad
author = Michael Hansen
author_email = mike@rhasspy.org
url = https://github.com/rhasspy/pymicro-vad
description = Self-contained voice activity detector
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache

[options]
packages = find:
python_requires = >=3.9

[bdist_wheel]
# This makes the wheel tag abi3 (single wheel per platform for all 3.9+)
py_limited_api = cp39
